--- a/index.html
+++ b/index.html
@@ -237,8 +237,13 @@
 									<span class="input-group-text"><i class="fa fa-key"></i></span>
 								</div>
 								<!-- change to text for debug (password) -->
-								<input type="text" name="password" id="password" class="form-control input-sm"
-									placeholder="Mật khẩu">
+								<input style="width: 200px" type="password" name="password" id="password"
+									class="form-control input-sm" placeholder="Mật khẩu">
+								<div class="input-group-prepend">
+									<span class="viewPass p-2" id="btnViewPass">
+										<i class="fa-regular fa-eye"></i>
+									</span>
+								</div>
 							</div>
 							<span class="sp-thongbao" id="tbMatKhau"></span>
 						</div>
